[tool.poetry]
name = "project-test"
version = "0.1.0"
description = "poetry test in render.com"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.8.4"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
